# AoC-2025

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_results.json  readme-stars.yml  setup.sh
.github/workflows/: readme-stars.yml
scripts/: benchmark_all.py  fetch_input.py  scaffold.py  scaffold.py:Zone.Identifier
src/: main.cpp
src/2024/day01/: solution.cpp  solution.hpp
src/2025/day01/: solution.cpp  solution.hpp
src/2025/day02/: solution.cpp  solution.hpp
src/2025/day03/: solution.cpp  solution.hpp
src/2025/day04/: solution.cpp  solution.hpp
src/2025/day05/: solution.cpp  solution.hpp
src/2025/day06/: solution.cpp  solution.hpp
src/2025/day07/: solution.cpp  solution.hpp
src/2025/day08/: solution.cpp  solution.hpp
src/2025/day09/: solution.cpp  solution.hpp
src/2025/day10/: solution.cpp  solution.hpp
src/common/: CMakeLists.txt  registry.hpp  runner.cpp  runner.h  solution.hpp  utils.cpp  utils.h  utils.hpp
templates/: CMakeLists.txt.tpl  solution.cpp.tpl  solution.h.tpl  test.cpp.tpl
